objects/SDO_Platform_Events_Page__c.object
<CustomObject>
    <description>What: Platform Events Page object.</description>
    <fields>
        <fullName>Background_URL__c</fullName>
        <label>Background URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Platform Events Page</label>
    <nameField>
        <label>Platform Event Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Events Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>